--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,9 +1,5 @@
-@use "../../styles/_variables" as *;
+@use '../../styles/_variables' as *;
 
 .home {
   padding: 1rem;
-}
-
-.title {
-  color: purple;
 }
